Send from a date

--- a/base.env
+++ b/base.env
@@ -1,8 +1,9 @@
 #CONFIG
 DOCUMENT_ROOT=/var/www/html  #Route to catch the files
 CHAT_ID= #Channel or Group ID
-INTERVAL= #Hours
 CAPTION= #Text you will send
+START_DATE= #Left empty to start from now or set a date in the format YYYY-MM-DD HH:MM:SS
+INTERVAL= #Hours between posts
 
 # Telegram API
 API_ID=
