Varias cosas mas

--- a/base.env
+++ b/base.env
@@ -1,10 +1,14 @@
 #CONFIG
-DOCUMENT_ROOT=/var/www/html  #Route to catch the files
-CHAT_ID= #Channel or Group ID
-CAPTION= #Text you will send
-START_DATE= #Left empty to start from now or set a date in the format YYYY-MM-DD HH:MM:SS
-INTERVAL= #Hours between posts
-
+#Route to catch the files
+DOCUMENT_ROOT=/var/www/html
+#Channel or Group ID
+CHAT_ID=#
+#Text you will send with the files
+CAPTION=#
+#First Date on the counter. Left empty to start from now or set a date in the format YYYY-MM-DD HH:MM:SS
+START_DATE=#
+#Interval in minutes between posts
+INTERVAL=#
 # Telegram API
 API_ID=
 API_HASH=
